hphp/hack/test/typecheck/strict_value_equality/bad_containers.php.like_types.exp
File "bad_containers.php", line 12, characters 3-30:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "bad_containers.php", line 5, characters 3-10:
  This is a dynamic value or an object of type vec<num> because it is an unenforceable type
  File "bad_containers.php", line 6, characters 3-10:
  This is a dynamic value or an object of type vec<int> because it is an unenforceable type
File "bad_containers.php", line 13, characters 3-33:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "bad_containers.php", line 6, characters 3-10:
  This is a dynamic value or an object of type vec<int> because it is an unenforceable type
  File "bad_containers.php", line 7, characters 3-13:
  This is a dynamic value or an object of type vec<string> because it is an unenforceable type
File "bad_containers.php", line 14, characters 3-34:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "bad_containers.php", line 5, characters 3-10:
  This is a dynamic value or an object of type vec<num> because it is an unenforceable type
  File "bad_containers.php", line 8, characters 3-14:
  This is an object of type vec<dynamic>
File "bad_containers.php", line 15, characters 3-43:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "bad_containers.php", line 9, characters 3-19:
  This is a dynamic value or an object of type dict<int, string> because it is an unenforceable type
  File "bad_containers.php", line 10, characters 3-16:
  This is a dynamic value or an object of type dict<int, int> because it is an unenforceable type
